--- a/packages/automake.yml
+++ b/packages/automake.yml
@@ -7,21 +7,21 @@ sources:
     extract_path: 'automake-1.17'
     version: '1.17'
     tools_required:
-      - host-autoconf
+      - autoconf
     regenerate:
       - args:
           - 'cp'
           - '-p'
-          - '@BUILD_ROOT@/tools/host-autoconf/share/autoconf/build-aux/config.guess'
-          - '@BUILD_ROOT@/tools/host-autoconf/share/autoconf/build-aux/config.sub'
+          - '@BUILD_ROOT@/tools/autoconf/share/autoconf/build-aux/config.guess'
+          - '@BUILD_ROOT@/tools/autoconf/share/autoconf/build-aux/config.sub'
           - '@THIS_SOURCE_DIR@/lib'
 
 tools:
-  - name: host-automake
+  - name: automake
     architecture: noarch
     from_source: automake
     tools_required:
-      - host-autoconf
+      - autoconf
     configure:
       - args: ['@THIS_SOURCE_DIR@/configure', '--prefix=@PREFIX@']
     compile:
