--- a/packages/proxima-init.yml
+++ b/packages/proxima-init.yml
@@ -5,13 +5,13 @@ packages:
       subdir: sources
       version: '0.0pl@ROLLING_ID@'
     tools_required:
-      - host-gcc-bootstrap
-      - host-meson
+      - gcc
+      - meson
     configure:
       - args:
           - 'meson'
           - 'setup'
-          - '--cross-file=@BUILD_ROOT@/tools/host-meson/cross.txt'
+          - '--cross-file=@BUILD_ROOT@/tools/meson/cross.txt'
           - '-Dprefix=/usr'
           - '-Dbuildtype=@OPTION:build-type@'
           - '-Db_lto=@OPTION:lto@'
