--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,6 +13,11 @@
             "externalConsole": false,
             "MIMode": "gdb",
             "miDebuggerPath": "${workspaceFolder}/support/gdb.sh",
+            "setupCommands": [
+                {
+                    "text": "add-symbol-file ${workspaceFolder}/build/system-root/usr/lib/ld.so -o 0x3000"
+                }
+            ],
             "preLaunchTask": "Proxima: rebuild active package",
             "debugServerPath": "${workspaceFolder}/support/qemu-debug.sh",
             "debugServerArgs": "${workspaceFolder}/build qemu-tcg",
