--- a/packages/mlibc.yml
+++ b/packages/mlibc.yml
@@ -26,6 +26,7 @@ packages:
           - 'meson'
           - 'setup'
           - '--cross-file=@BUILD_ROOT@/tools/meson/cross.txt'
+          - '--wrap-mode=nodownload'
           - '-Dprefix=/usr'
           - '-Dbuildtype=@OPTION:build-type@'
           - '-Db_ndebug=if-release'
@@ -49,6 +50,7 @@ packages:
           - 'meson'
           - 'setup'
           - '--cross-file=@BUILD_ROOT@/tools/meson/cross.txt'
+          - '--wrap-mode=nodownload'
           - '-Dprefix=/usr'
           - '-Dbuildtype=@OPTION:build-type@'
           - '-Db_ndebug=if-release'
