--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,7 +15,10 @@
             "miDebuggerPath": "${workspaceFolder}/support/gdb.sh",
             "setupCommands": [
                 {
-                    "text": "add-symbol-file ${workspaceFolder}/build/system-root/usr/lib/ld.so -o 0x3000"
+                    "text": "add-symbol-file ${workspaceFolder}/build/system-root/usr/bin/proxima-devicesd -o 0x1000"
+                },
+                {
+                    "text": "add-symbol-file ${workspaceFolder}/build/system-root/usr/lib/libc.so -o 0xbec000"
                 }
             ],
             "preLaunchTask": "Proxima: rebuild active package",
