packages: add readline

--- a/bootstrap.yml
+++ b/bootstrap.yml
@@ -51,4 +51,5 @@ imports:
   - file: packages/proxima.yml
   - file: packages/proxima-devicesd.yml
   - file: packages/proxima-init.yml
+  - file: packages/readline.yml
   - file: packages/tzdata.yml
