filesystem: add /etc/group and /etc/passwd

--- a/packages/filesystem.yml
+++ b/packages/filesystem.yml
@@ -9,7 +9,14 @@ packages:
       - args:
           - 'mkdir'
           - '-p'
+          - '@THIS_COLLECT_DIR@/etc'
           - '@THIS_COLLECT_DIR@/usr/bin'
           - '@THIS_COLLECT_DIR@/usr/lib'
       - args: ['ln', '-sf', 'bin', '@THIS_COLLECT_DIR@/usr/sbin']
       - args: ['ln', '-sf', 'usr/bin', 'usr/lib', 'usr/sbin', '@THIS_COLLECT_DIR@']
+      - args:
+          - 'cp'
+          - '-p'
+          - '@THIS_SOURCE_DIR@/group'
+          - '@THIS_SOURCE_DIR@/passwd'
+          - '@THIS_COLLECT_DIR@/etc'
