--- a/packages/bash.yml
+++ b/packages/bash.yml
@@ -19,7 +19,6 @@ packages:
             AUTOHEADER: 'true'
     pkgs_required:
       - ncurses
-      - readline
     tools_required:
       - gcc
       - pkgconf
@@ -30,8 +29,8 @@ packages:
           - '--prefix=/usr'
           - '--with-curses'
           - '--without-bash-malloc'
-          - 'CFLAGS=-DHEREDOC_PIPEMAX=0x4000 -std=gnu17'
-          - 'CFLAGS_FOR_BUILD=-std=gnu17'
+          - 'CFLAGS=-DHEREDOC_PIPEMAX=0x4000 -std=gnu17 -g'
+          - 'CFLAGS_FOR_BUILD=-std=gnu17 -g'
     build:
       - args: ['make', '-j@PARALLELISM@']
       - args: ['make', '-j@PARALLELISM@', 'DESTDIR=@THIS_COLLECT_DIR@', 'install']
