--- a/packages/proxima.yml
+++ b/packages/proxima.yml
@@ -5,6 +5,5 @@ packages:
       subdir: sources
       version: '0.0pl@ROLLING_ID@'
     pkgs_required:
-      - bash
-      - coreutils
+      - proxima-devicesd
       - proxima-init
